# confia-lean-auditor

./: .gitignore  AUDITORIA_REPOSITORIO.md  ConfiaLeanAuditor.lean  README.md  lake-manifest.json  lakefile.toml  pyproject.toml
.github/workflows/: lean_action_ci.yml  python_tests.yml
ConfiaLeanAuditor/Problems/ITA2025F2Q1/: Statement.lean
ConfiaLeanAuditor/Problems/ITA2025F2Q5/: Statement.lean
ConfiaLeanAuditor/Problems/ITA2025F2Q6/: Statement.lean
app/confia_lean_auditor/: main.py
app/confia_lean_auditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: lean_security_whitelist.md
problems/ITA2025F2Q1/: microclaims.json  problem.json  rubric.json
problems/ITA2025F2Q5/: microclaims.json  problem.json  rubric.json
problems/ITA2025F2Q6/: microclaims.json  problem.json  rubric.json
problems/ITA2025Q1/: microclaims.json  problem.json  rubric.json
problems/ITA2025Q3/: microclaims.json  problem.json  rubric.json
problems/ITA2025Q4/: microclaims.json  problem.json  rubric.json
problems/ITA2025Q5/: microclaims.json  problem.json  rubric.json
problems/ITA2025Q8/: microclaims.json  problem.json  rubric.json
tests/: test_evaluator_architecture.py  test_ita2025f2q1_level1.py  test_ita2025f2q5_level1.py  test_ita2025f2q6_level1.py  test_ita2025q1_level2.py  test_ita2025q3_level1.py  test_ita2025q4_level1.py  test_ita2025q4_level2.py  test_ita2025q5_level1.py  test_ita2025q8_level1.py  test_microclaim_dependencies_conservative.py  test_problem_assets_contracts.py  test_problem_assets_validation.py  test_problem_router_coverage.py
(+95 files in other folders)
