[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confia-lean-auditor"
version = "0.1.0"
description = "ConfIA Lean Auditor: corretor matemático com rubrica e certificados Lean"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "pytest",
    "httpx",
    "openai>=1.0.0"
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
